Addition of button component, colors and utilities

--- a/src/less/all.less
+++ b/src/less/all.less
@@ -11,5 +11,35 @@
 // -------------------------
 //@import 'miscellaneous/normalize';
 
-@import "components/button";
+
+// Single-purpose classes
+// -------------------------
+
+@import "spc/background-position";
+@import "spc/background-repeat";
+@import "spc/border-width";
+@import "spc/box-sizing";
+@import "spc/cursor";
 @import "spc/display";
+@import "spc/height";
+@import "spc/vertical-align";
+
+// Theme
+// -------------------------
+
+@import "theme/hover-state";
+@import "theme/background-color";
+@import "theme/border-radius";
+@import "theme/box-shadow";
+@import "theme/color";
+@import "theme/color-scheme";
+@import "theme/font-family";
+@import "theme/font-size";
+@import "theme/letter-spacing";
+@import "theme/line-height";
+
+// Components
+// -------------------------
+
+@import "components/button";
+@import "components/loader";
