Adding background-repeat(spc) and making small adjustments

--- a/src/less/spc/background-repeat.less
+++ b/src/less/spc/background-repeat.less
@@ -1,1 +1,4 @@
-
+.backgroundRepeat-repeat    { background-repeat: repeat; }
+.backgroundRepeat-repeatX   { background-repeat: repeat-x; }
+.backgroundRepeat-repeatY   { background-repeat: repeat-y; }
+.backgroundRepeat-noRepeat  { background-repeat: no-repeat; }
