add clear, float (spcs) and vertically-center utility.

--- a/src/less/all.less
+++ b/src/less/all.less
@@ -20,9 +20,13 @@
 @import "spc/border-width";
 @import "spc/box-sizing";
 @import "spc/cursor";
+@import "spc/clear";
 @import "spc/display";
+@import "spc/float";
 @import "spc/height";
+@import "spc/position";
 @import "spc/vertical-align";
+@import "spc/width";
 
 // Theme
 // -------------------------
@@ -52,3 +56,4 @@
 // -------------------------
 
 @import "utils/clearfix";
+@import "utils/vertically-center";
