ideas and sugestion container

--- a/src/less/all.less
+++ b/src/less/all.less
@@ -9,7 +9,7 @@
 
 // Resets
 // -------------------------
-//@import 'miscellaneous/normalize';
+@import 'miscellaneous/normalize';
 
 
 // Single-purpose classes
@@ -33,6 +33,7 @@
 
 @import "theme/hover-state";
 @import "theme/background-color";
+@import "theme/border-color";
 @import "theme/border-radius";
 @import "theme/box-shadow";
 @import "theme/color";
@@ -55,5 +56,6 @@
 // Utilitys
 // -------------------------
 
+@import "utils/centered";
 @import "utils/clearfix";
 @import "utils/vertically-center";
